# modernlib

./: .gitignore  CMakeLists.txt  README.org
include/: allocator.h  basis.h  byteswap.h  collection.h  data_buffer.h  dyn_array_impl.h  dyn_array_itf.h  dyn_array_macro.h  dyn_char_array.h  dyn_cstr.h  dyn_cwstr.h  dyn_str_impl.h  dyn_str_itf.h  dyn_wchar_array.h  errors.h  interface.h  macros.h  nullptr.h  optional.h  optional_itf.h  result.h  stopwatch.h  timespan.h  util.h
include/internal/: compilers.h
include/modernlib/: allocator.h  arithmetic.h  basis.h  byteswap.h  collection.h  common_mem_ptr.h  conversions.h  data_buffer.h  datetime.h  dyn_array_impl.h  dyn_array_itf.h  dyn_array_macro.h  dyn_char_array.h  dyn_cstr.h  dyn_cwstr.h  dyn_str_impl.h  dyn_str_itf.h  dyn_str_macro.h  dyn_wchar_array.h  enumerable.h  enumerator_itf.h  enumerator_macro.h  errors.h  interface.h  macros.h  mem_ptr.h  mem_ptr_itf.h  mem_ptr_macro.h  nullptr.h  numerics.h  optional_itf.h  pair_itf.h  pair_macro.h  reinterpret.h  resmgmt.h  smart_enum.h  stopwatch.h  timespan.h  u16char.h  utfconverter.h
include/modernlib/internal/: compilers.h
include/modernlib/math/: clamp.h  clamp_itf.h  min_max.h  min_max_itf.h  type_alias.h
src/: allocator.c  arithmetic.c  data_buffer.c  datetime.c  dyn_char_array.c  dyn_cstr.c  dyn_cwstr.c  dyn_wchar_array.c  numerics.c  reinterpret.c  smart_enum.c  stopwatch.c  u16char.c  utfconverter.c
test/: CMakeLists.txt  cpp_build_test.cpp  data_buffer_test.c  datetime_test.c  dyn_str_test.c  mem_ptr_test.c  numerics_clamp_test.c  resmgmt_test.c  resmgmt_test.cpp  utest.h  utfconverter_test.c
